--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <version>2.5.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-boot-starter</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
